--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+@import './scss/custom';
+
+//IMPORT THE COMPONENTS
+@import './scss/components/mixing';
+// @import './scss/components/animations';
+// @import './scss/components/button';
+
+// @import './scss/components/typography';
+
+// //IMPORT THE SECTIONS
+// @import './scss/sections/companies';
+// @import './scss/sections/faq';
+// @import './scss/sections/footor';
+// @import './scss/sections/services';
+// @import './scss/sections/get-started';
+// @import './scss/sections/testimonials';
+// @import './scss/sections/intro-section';
+// @import './scss/sections/navbar';
+
+// @import './scss/sections/portfolio';
+
